# openswr

./: CMakeLists.txt  README.md  VERSIONS.md  _clang-format
common/: algebra.hpp  containers.hpp  os.h  simdintrin.h  widevector.hpp
compiler/: CMakeLists.txt  GPUFPMath.cpp  GPUFPMath.h  PtWise.cpp  PtWise.h  Simtize.cpp  Simtize.h  compiler.cpp  compiler.h  shader_math.h  shaders.cpp  shaders.h  shaders_vs.cpp  swrcwordcode.inl  texture_unit.cpp  texture_unit.h
core/: CMakeLists.txt  api.cpp  api.h  arena.cpp  arena.h  backend.cpp  backend.h  clip.cpp  clip.h  context.h  defs.h  fifo.hpp  formats.cpp  formats.h  frontend.cpp  frontend.h  knobs.h  pa.cpp  pa.h  pa_avx.cpp  rasterizer.cpp  rasterizer.h  rdtsc.cpp  rdtsc.h  rdtsc_def.h  resource.cpp  resource.h  threads.cpp  threads.h  tilemgr.cpp  tilemgr.h  utils.cpp  utils.h
ogldriver/: CMakeLists.txt  dllmain.cpp  enumMap.inl  fragff.cpp  gldd.h  glfz.cpp  glim.cpp  glst.cpp  glsx.cpp  gltrace.inl  glx.cpp  ogl_generate.py  ogl_serialize.py  ogldisplaylist.cpp  ogldisplaylist.hpp  oglglobals.cpp  oglglobals.h  oglstate.cpp  oglstate.hpp  osmesa.cpp  swrdd.cpp  swrffgen.cpp  swrffgen.h  wgl.cpp
ogldriver/gl/: gl.h  glx.h  osmesa.h  wgl.h
